# g4ds_matteo

./: CMakeLists.txt  CONTRIBUTING.md  GNUmakefile  README.md  configDarkSide.sh  g4ds.cc
data/detector/: outDS20k_veto_optics_v2_SiPM_placement.txt
data/physics/: LArScintillatioProperties.txt  amc1umFoil_out_thetaNVsEnH.txt  (+1 more)
include/: DSBiasStopStep.hh  DSBiasStopStepMessenger.hh  DSDetectorARISER.hh  DSDetectorARISERGamma.hh  DSDetectorArDM.hh  DSDetectorCalibrationDevice.hh  DSDetectorConstruction.hh  DSDetectorConstructionMessenger.hh  DSDetectorDS10.hh  DSDetectorDS20k.hh  DSDetectorDS20kNeutronVeto.hh  DSDetectorDS50.hh  DSDetectorDart.hh  DSDetectorDuneCryostat.hh  DSDetectorGantryCalibration.hh  DSDetectorLicorne.hh  DSDetectorLicorneNeutron.hh  DSDetectorNeutronReD.hh  DSDetectorNeutronVeto.hh  DSDetectorPET.hh  DSDetectorPMTDS50.hh  DSDetectorPMTDSG2.hh  DSDetectorPMTNeutronVeto.hh  DSDetectorPlasticVeto.hh  DSDetectorProto.hh  DSDetectorProtoProto.hh  DSDetectorReD.hh  DSDetectorReDMessenger.hh  DSDetectorSource.hh  DSDetectorTester.hh  DSDetectorWaterTank.hh  DSEventAction.hh  DSEventActionMessenger.hh  DSEventHandler.hh  DSEventStructure.hh  DSG4DSReader.hh  DSGeneratorAmBeSource.hh  DSGeneratorAmBeSourceMessenger.hh  DSGeneratorAmCSource.hh  DSGeneratorAmCSourceMessenger.hh  (+67 more)
macros/: CalibrationExample.mac  DepositGenerator.mac  S1S2.mac  ambe.mac  amc.mac  argo.mac  ariser.mac  bias.mac  calis.mac  cosmicray.mac  dart-external.mac  depos.mac  dev.mac  ds10.mac  ds20fluka.mac  ds20k_veto_optics.mac  ds20kbg.mac  ds20klm.mac  ds20klsv.mac  ds50lsv.mac  dsProto.mac  dsProtoProto.mac  edep.mac  gantry.mac  geo.mac  hepevt.mac  licorne.mac  multi.mac  multisp.mac  neutron_captures.mac  neutrons.mac  photons.mac  rdm.mac  rdmchain.mac  read_depos.mac  red.mac  red_lns.mac  run.mac  scs.mac  vis.mac  (+2 more)
manual/: g4ds.pptx  g4dsman.tex  typeset_g4dsman.sh
src/: DSBiasStopStep.cc  DSBiasStopStepMessenger.cc  DSDetectorARISER.cc  DSDetectorARISERGamma.cc  DSDetectorArDM.cc  DSDetectorCalibrationDevice.cc  DSDetectorConstruction.cc  DSDetectorConstructionMessenger.cc  DSDetectorDS10.cc  DSDetectorDS20k.cc  DSDetectorDS20kNeutronVeto.cc  DSDetectorDS50.cc  DSDetectorDart.cc  DSDetectorDuneCryostat.cc  DSDetectorGantryCalibration.cc  DSDetectorLicorne.cc  DSDetectorLicorneNeutron.cc  DSDetectorNeutronReD.cc  DSDetectorNeutronVeto.cc  DSDetectorPET.cc  DSDetectorPMTDS50.cc  DSDetectorPMTNeutronVeto.cc  DSDetectorPlasticVeto.cc  DSDetectorProto.cc  DSDetectorProtoProto.cc  DSDetectorReD.cc  DSDetectorSource.cc  DSDetectorTester.cc  DSDetectorWaterTank.cc  DSEventAction.cc  DSEventActionMessenger.cc  DSEventHandler.cc  DSG4DSReader.cc  DSGeneratorAmBeSource.cc  DSGeneratorAmBeSourceMessenger.cc  DSGeneratorAmCSource.cc  DSGeneratorAmCSourceMessenger.cc  DSGeneratorBias.cc  DSGeneratorBiasMessenger.cc  DSGeneratorCosmicRayMuons.cc  (+68 more)
tools/: ReDplacementLSC.py  compile_all_rooters  compile_licorne  compile_pet_rooter  compile_rooter  compile_rooterReD  g4counter.C  g4dart  g4dart.C  g4licorne.C  g4licorne_pulsed.C  g4merger  g4merger.C  g4merger_full.C  g4rooter  g4rooterReD.C  g4rooter_full  g4rooter_lm  g4rooter_nDS20k  g4rooter_nDS20k_VETO  g4rooter_nDS20k_update  g4rooter_prereco  g4rooter_reco  g4rootered.C  g4rootered_PET.C  g4rootered_ariser.C  g4rootered_full.C  g4rootered_lm.C  g4rootered_nDS20k.C  g4rootered_nDS20k_VETO.C  g4rootered_nDS20k_update.C  g4rootered_prereco.C  g4rootered_reco.C  make_prereco.pl  my-clang-format  sim_sub.pl  submit_sbatch.py  vetopmts.pl
(+5 files in other folders)
